# pfs

./: .gitignore  README.md  docker-compose.yml  example_accounts.csv
.claude/: settings.json  settings.local.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/api/: models.py  tests.py  urls.py  views.py
backend/api/management/commands/: bootstrap_admin.py
backend/api/migrations/: 0001_initial.py  0002_userprofile_matricule.py  0003_brigade_specialite_classe_cours_controle_and_more.py  0004_corps_speciality_userprofile_est_civil_and_more.py  0005_eventaudit.py  0006_speciality_corps.py  0007_fix_role_typos.py  0008_controle_fichier_enonce.py  0009_bootstrap_data.py  0010_alter_userprofile_role.py  0011_module.py  0012_matiere.py  0013_coursefichier_filefield.py  0014_brochure.py  0015_cours_classe.py
backend/config/: settings.py  urls.py
backend/media/cours_fichiers/: 61d1fe42-1d3a-42de-9f77-fd4d41eb61d1.rtf  désinstallation_oracle.docx
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx  PdfViewer.tsx  i18n.ts  index.css  main.tsx
scripts/: start-backend.ps1  start-frontend.ps1
