[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django REST API backend template"
authors = ["Template Maintainers <maintainers@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "6.0.1"
djangorestframework = "3.16.1"
djangorestframework-simplejwt = "5.5.1"
django-cors-headers = "4.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
